--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 		var mydate = new DayDate();
 		var myseconddate = new DayDate();
 		//mydate.myDate('date', 'month', 'last 2 digits of year', 'first 2 digits of year');
-		mydate.myDate('19', 'march', '14', '20');
+		//mydate.myDate('19', 'march', '14', '20');
+		mydate.myDate('19 march 2014');
 		
 	</script>
 </html>
