--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 		var myseconddate = new DayDate();
 		//mydate.myDate('date', 'month', 'last 2 digits of year', 'first 2 digits of year');
 		//mydate.myDate('19', 'march', '14', '20');
-		mydate.myDate('19 march 2014');
+		//mydate.myDate('19 march 2014');
+		mydate.myDate();
 		
 	</script>
 </html>
