--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
 	</body>
 	<script>
 		var mydate = new DayDate();
-		var myseconddate = new DayDate();
-		//mydate.myDate('date', 'month', 'last 2 digits of year', 'first 2 digits of year');
-		//mydate.myDate('19', 'march', '14', '20');
-		mydate.myDate('19 march 2014');
+		//mydate.get('19 march 2014');
+		mydate.get();
 		
 	</script>
 </html>
